[package]
name = "psbt-v0"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "Sanket Kanjalkar <sanket1729@gmail.com>", "Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
repository = "https://github.com/tcharding/rust-psbt-v0/"
description = "Partially Signed Bitcoin Transaction Format - BIP-174"
categories = ["cryptography::cryptocurrencies"]
keywords = [ "psbt", "bip-174", "bip174", "psbt-v0", "psbtv0"]
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"
exclude = ["tests", "contrib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["bitcoin/std", "bitcoin-internals/std"]
rand-std = ["bitcoin/rand-std", "std"]
rand = ["bitcoin/rand"]
serde = ["actual-serde", "bitcoin/serde", "bitcoin-internals/serde"]
miniscript-std = ["std", "miniscript/std"]
miniscript-no-std = ["miniscript/no-std"]

[dependencies]
bitcoin = { version = "0.32.2", default-features = false }
bitcoin-internals = { version = "0.3.0", features = ["alloc"] }

base64 = { version = "0.21.3", optional = true }
miniscript = { version = "12.2.0", default-features = false, optional = true }

# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1.0.103", default-features = false, features = [ "derive", "alloc" ], optional = true }

[dev-dependencies]
anyhow = "1"
bincode = "1.3.1"
serde_json = "1.0.0"
serde_test = "1.0.19"
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }

[[example]]
name = "multisig"
required-features = ["rand-std"]

[patch.crates-io.miniscript]
path = "/home/tobin/build/github.com/tcharding/rust-miniscript/master"
